# quorascrapper

./: .containerignore  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.scraper  README.md  check_mongodb_data.py  deploy_bokomint.sh  discover_mongo_hostname.py  docker-compose.yml  healthcheck.py  kafka_subscriber.py  logging_setup.py  main.py  monitor_mongodb.py  podman_qsbk.sh  podman_scraper.sh  podman_subscriber.sh  profile.html  pyproject.toml  quora_scraper.py  quora_selectors.py  senders.py  start_subscriber.sh  test.txt  test_container_setup.sh  test_mongo_connection.py  test_subscriber.py
.cursor/rules/: extension-install-precheck.mdc  figjam-illustrations.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: CRITICAL_REVIEW.md  DEFINITIONS.md  ISSUES.md
extension/: README.md  background.js  config.json  manifest.json  marks.js  panel-shell.js  popup.html  popup.js  scrape.js  serve-config.js
extension/mockup/: dashboard-mockup.html
scripts/: build_extension_icons.py  test_kafka_producer.py  test_mongo_connection.py
src/quorascrapper/: __init__.py  cli.py  config.py  exceptions.py  logging_setup.py  selectors.py
src/quorascrapper/filter/: cli.py  core.py
src/quorascrapper/messaging/: __init__.py  base.py  kafka.py  serve.py  stdout.py
src/quorascrapper/ops/: __init__.py  config_cmd.py  discover_mongo.py  dry_run.py  gate.py  healthcheck.py  ingest.py  ingest_idempotency.py  install.py  known_urls.py  mongo_check.py  monitor.py  preflight.py  serve.py  serve_store.py  verify_urls.py
src/quorascrapper/scraper/: __init__.py  browser.py  browser_env.py  browser_paths.py  cli.py  extract.py  graphql.py  scroll.py  service.py  stats.py
src/quorascrapper/subscriber/: __init__.py  cli.py  consumer.py  storage.py
tests/: test_browser_env.py  test_cli.py  test_config.py  test_discover_mongo.py  test_dry_run.py  test_extract.py  test_filter.py  test_gate.py  test_graphql.py  test_healthcheck.py  test_ingest.py  test_ingest_idempotency.py  test_install.py  test_known_urls.py  test_mongo_check.py  test_monitor.py  test_preflight.py  test_sender_hash.py  test_serve.py  test_subscriber.py  test_utils.py
tests/fixtures/: answers_snippet.html  login_wall.html
