[project]
name = "quorascrapper"
version = "0.1.0"
description = "Quora profile Q&A scraper using Selenium"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium>=4.30.0",
    "confluent-kafka>=2.3.0",
    "python-dotenv>=1.0.1",
    "pymongo>=4.15.3",
    "python-json-logger>=2.0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
